2001-06-08  Dave Peticolas  <dave@krondo.com>

	* src/SplitLedger.c (xaccSRGetEntryHandler): handle reconcile
	cell string as appropriate for translate flag.

	* src/register/table-allgui.c (gnc_table_get_entry): return
	translated version
	(gnc_table_get_entry_internal): return untranslated version

	* src/register/table-allgui.h: add 'translate' argument to
	entry handler api.

2001-06-08 Christian Stimming <stimming@tuhh.de>

	* configure.in, accounts/Makefile.am, accounts/de_DE/*: add
	account template files for German locale.

	* src/gnome/gnucash.desktop, po/de.po: updated German translation.

2001-06-08  Dave Peticolas  <dave@krondo.com>

	* src/doc/design/engine.texinfo: update docs

	* src/doc/design/gnucash-design.texinfo: update docs

2001-06-08  Robert Graham Merkel  <rgmerk@mira.net>

	* doc/sgml/C/xacc-file-operations.sgml, xacc-quickstart.sgml, 
	xacc-regwin.sgml: updates and corrections.

2001-06-07  Dave Peticolas  <dave@krondo.com>

	* src/scm/price-quotes.scm: same as below

	* src/scm/Makefile.am: same as below

	* src/scm/process.scm: un-modulize process.scm. Let's experiment
	with this after 1.6.

	* src/gnome/new-user-callbacks.c (gnc_get_ea_locale_dir): if first
	check fails, see if 2-letter prefix succeeds

2001-06-07  James LewisMoss  <jimdres@mindspring.com>

	* doc/README.translator.txt (variables): add instructions for
	manual and account hierarchy files.

	* src/gnome/new-user-callbacks.c: fix test for commodity added by
	setting data on druid rather than a global variable (bad jim.
	global variable bad).
	(on_chooseAccountTypesPage_prepare): remove old comment.
	(on_chooseAccountTypesPage_prepare): set object data that account
	lists loaded.
	(on_chooseAccountTypesPage_prepare): use new func to determine
	locale dir.
	(gnc_get_ea_locale_dir): new func to determine locale correct dir
	to read account files from.

	* src/gnome/new-user-funs.c (gnc_get_new_user_dialog): new func.
